--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ project (HMM)
 add_subdirectory(lib)
 add_subdirectory(hmm)
 add_subdirectory(naive)
+add_subdirectory(st-test)
 add_subdirectory(tests)
 
 
