--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,9 @@ project (HMM)
 add_subdirectory(lib)
 add_subdirectory(hmm)
 add_subdirectory(naive)
+add_subdirectory(st-naive)
 add_subdirectory(st-test)
+add_subdirectory(st-interactive)
 add_subdirectory(tests)
 
 
