a lot of stuff.. :-/

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,10 @@ add_subdirectory(lib)
 add_subdirectory(hmm)
 add_subdirectory(naive)
 add_subdirectory(st-naive)
+add_subdirectory(msst-naive)
 add_subdirectory(st-test)
 add_subdirectory(st-interactive)
+add_subdirectory(msst-interactive)
 add_subdirectory(tests)
 
 
