added msst-hmm, kmeans++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(hmm)
 add_subdirectory(naive)
 add_subdirectory(st-naive)
 add_subdirectory(msst-naive)
+add_subdirectory(msst-hmm)
 add_subdirectory(st-test)
 add_subdirectory(st-interactive)
 add_subdirectory(msst-interactive)
