add program to refine the mscr-data

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,5 +11,6 @@ add_subdirectory(st-test)
 add_subdirectory(st-interactive)
 add_subdirectory(msst-interactive)
 add_subdirectory(tests)
+add_subdirectory(refine-mscr)
 
 
