first version of aos nonlinear diffusion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,5 +12,6 @@ add_subdirectory(st-interactive)
 add_subdirectory(msst-interactive)
 add_subdirectory(tests)
 add_subdirectory(refine-mscr)
+add_subdirectory(nldif)
 
 
