added tool to compute hu moments

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,5 +13,7 @@ add_subdirectory(msst-interactive)
 add_subdirectory(tests)
 add_subdirectory(refine-mscr)
 add_subdirectory(nldif)
+add_subdirectory(shapes)
+
 
 
